# sts

./: Cargo.toml  README.md  README.mdi.md  dist.sh  init.sh  out.txt
src/: lib.rs
tests/: main.rs
