[package]
name = "sts"
version = "0.0.3"
edition = "2021"
license = "BSL-1.0"
homepage = "https://github.com/xxai-art/sts"
repository = "https://github.com/xxai-art/sts"
description = "shortcut for timestamp"

[dependencies]
coarsetime = "0.1.23"

[dev-dependencies]

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
# strip = true
